added contact section & art for the sections

--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
 
         <!--- Navigation Bar  ------------------------>
         <header>
-            <nav class="navbar navbar-expand-md navbar-dark nav-bg fixed-top">
+            <nav class="navbar navbar-expand-md navbar-dark bg-black fixed-top">
                 <div class="container">
                     <a class="navbar-brand nav-font" href="#">Home</a>
 
@@ -59,8 +59,9 @@
         <main>
 
             <!-- About section -------->
-            <div class="container text-center pt-2">
-                <h1 class="section-headings"><strong>ABOUT</strong></h1>
+            <div class="container text-center pt-4">
+                <h1 class="section-headings mb-0"><strong>ABOUT</strong></h1>
+                <img class="img-fluid contact-icons2 mt-2" src="../images/icons/contact-line-black.svg" alt="Card image cap">
             </div>
 
             <div class="container">
@@ -109,8 +110,9 @@
 
 
             <!-- Experience section -------->
-            <div class="container text-center pt-1" id="experience">
+            <div class="container text-center pt-1 mb-0" id="experience">
                 <h1 class="section-headings mb-0 pt-5"><strong>EXPERIENCE</strong></h1>
+                <img class="img-fluid contact-icons2 mt-2" src="../images/icons/contact-line-black.svg" alt="Card image cap">
             </div>
 
             <!-- FIS card -->
@@ -120,7 +122,7 @@
                     <div class="row">
                         <div class="col-md-3 col-lg-2">
                             <a href="https://fisglobal.com" target="_blank">
-                                <img class="img-fluid pl-3" src="../images/experience/FIS_Logo.svg"
+                                <img class="img-fluid pl-md-3" src="../images/experience/FIS_Logo.svg"
                                     alt="Card image cap">
                             </a>
                         </div>
@@ -192,8 +194,8 @@
                     <div class="row">
                         <div class="col-md-3 col-lg-2">
                             <a href="https://valenciacollege.edu/" target="_blank">
-                                <img class="img-fluid card-img  pl-3" style="width: 100% \9; height: 100%;"
-                                    src="../images/experience/Valencia_Logo.svg"" alt=" Card image cap">
+                                <img class="img-fluid card-img pl-md-3" style="width: 100% \9; height: 100%;"
+                                    src="../images/experience/Valencia_Logo.svg" alt=" Card image cap">
                             </a>
                         </div>
 
@@ -248,8 +250,9 @@
 
 
             <!-- Project section -------->
-            <div class="container text-center pt-1" id="project">
+            <div class="container text-center pt-1 mb-0" id="project">
                 <h1 class="section-headings mb-0 pt-5"><strong>PROJECTS</strong></h1>
+                <img class="img-fluid contact-icons2 mt-2" src="../images/icons/contact-line-black.svg" alt="Card image cap">
             </div>
 
             <!-- container for project cards -->
@@ -304,8 +307,9 @@
 
 
             <!-- Skills section -------->
-            <div class="container text-center pt-1" id="skills">
+            <div class="container text-center pt-1 mb-0" id="skills">
                 <h1 class="section-headings mb-0 pt-5"><strong>SKILLS</strong></h1>
+                <img class="img-fluid contact-icons2 mt-2" src="../images/icons/contact-line-black.svg" alt="Card image cap">
             </div>
 
             <!-- Languages Card -->
@@ -322,23 +326,27 @@
                     <!-- Logos Row -->
                     <div class="row card-body">
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/c_logo.svg" alt="Card image cap">
-                            <p class="pl-3 pt-2 mb-lg-0" >C</p>
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/c_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2 mb-lg-0">C</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/java_logo.svg" alt="Card image cap">
-                            <p class="pl-3 pt-2 mb-lg-0" >Java</p>
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/java_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2 mb-lg-0">Java</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/cobol_logo.svg" alt="Card image cap">
-                            <p class="pl-3 pt-2 mb-lg-0" >COBOL</p>
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/cobol_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2 mb-lg-0">COBOL</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/mysql_logo.svg" alt="Card image cap">
-                            <p class="pl-3 pt-2 mb-lg-0" >MySql</p>
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/mysql_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2 mb-lg-0">MySql</p>
                         </div>
                     </div>
                 </div>
@@ -358,38 +366,45 @@
                     <!-- Logos Row -->
                     <div class="row card-body">
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/html5_logo.svg" alt="Card image cap">
-                            <p class="pl-3 pt-2 mb-lg-2" >HTML</p>
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/html5_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2 mb-lg-2">HTML</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/css_logo.svg" alt="Card image cap">
-                            <p class="pl-3 pt-2" >CSS</p>
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/css_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2">CSS</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/javascript_logo.svg" alt="Card image cap">
-                            <p class="pl-3 pt-2" >JavaScript</p>
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/javascript_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2">JavaScript</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img  pl-3" src="../images/skills/nodejs_logo.svg" alt="Card image cap">
-                            <p class="pl-3 pt-2" >Node JS</p>
+                            <img class="img-fluid skill-img  pl-3" src="../images/skills/nodejs_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2">Node JS</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/react_logo.svg" alt="Card image cap">
-                            <p class="pl-3 pt-2" >React JS</p>
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/react_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2">React JS</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/expressjs_logo.svg" alt="Card image cap">
-                            <p class="pl-3 pt-2" >Express JS</p>
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/expressjs_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2">Express JS</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/bootstrap_logo.svg" alt="Card image cap">
-                            <p class="pl-3 pt-2" >Bootstrap</p>
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/bootstrap_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2">Bootstrap</p>
                         </div>
                     </div>
 
@@ -412,38 +427,45 @@
                     <!-- Logos Row -->
                     <div class="row card-body">
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/data_structures_logo.svg" alt="Card image cap" >
-                            <p class="pl-3 pt-2" >Data Structures & Algorithms</p>
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/data_structures_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2">Data Structures & Algorithms</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/git_logo.svg" alt="Card image cap">
-                            <p class="pl-3 pt-2" >Git</p>
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/git_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2">Git</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/github_logo.svg" alt="Card image cap">
-                            <p class="pl-3 pt-2" >Github</p>
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/github_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2">Github</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/heroku_logo.svg" alt="Card image cap">
-                            <p class="pl-3 pt-2" >Heroku</p>
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/heroku_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2">Heroku</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/android_logo.svg" alt="Card image cap">
-                            <p class="pl-3 pt-2" >Android Development</p>
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/android_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2">Android Development</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/npm_logo.svg" alt="Card image cap">
-                            <p class="pl-3 pt-2" >Npm</p>
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/npm_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2">Npm</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-3 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/math_logo.svg" alt="Card image cap">
-                            <p class="pl-3 pt-2" >Mathematics</p>
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/math_logo.svg"
+                                alt="Card image cap">
+                            <p class="pl-3 pt-2">Mathematics</p>
                         </div>
                     </div>
                 </div>
@@ -451,7 +473,7 @@
 
 
             <!-- Soft Skills Card -->
-            <div class="container mt-4">
+            <div class="container mt-4 mb-5">
                 <div class="card text-left pt-3">
                     <!-- Others Name Row -->
                     <div class="row">
@@ -463,37 +485,75 @@
                     <!-- Logos Row -->
                     <div class="row card-body">
                         <div class="col-6 col-md-4 col-lg-2 text-center">
-                            <img class="img-fluid skill-img  pl-3" src="../images/skills/leadership_logo.svg" alt="Card image cap">
+                            <img class="img-fluid skill-img  pl-3" src="../images/skills/leadership_logo.svg"
+                                alt="Card image cap">
                             <p class="pl-3 pt-2 mb-lg-0">Leadership</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-2 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/thinking_logo.svg" alt="Card image cap">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/thinking_logo.svg"
+                                alt="Card image cap">
                             <p class="pl-3 pt-2 mb-lg-0">Critical Thinking</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-2 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/dedication_logo.svg" alt="Card image cap">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/dedication_logo.svg"
+                                alt="Card image cap">
                             <p class="pl-3 pt-2 mb-lg-0">Hard Work & Dedication</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-2 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/teamwork_logo.svg" alt="Card image cap">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/teamwork_logo.svg"
+                                alt="Card image cap">
                             <p class="pl-3 pt-2 mb-lg-0">Team Work</p>
                         </div>
 
                         <div class="col-6 col-md-4 col-lg-2 text-center">
-                            <img class="img-fluid skill-img pl-3" src="../images/skills/positive_logo.svg" alt="Card image cap">
+                            <img class="img-fluid skill-img pl-3" src="../images/skills/positive_logo.svg"
+                                alt="Card image cap">
                             <p class="pl-3 pt-2 mb-lg-0">Confidence & Positive Attitude</p>
                         </div>
                     </div>
                 </div>
             </div>
 
+
+            <!-- Contact section -------->
+            
+            <img class="img-fluid pt-2 pb-0" src="../images/icons/contact-border.svg" alt="Card image cap" style="width: 100%;">
+
+            <div class="bg-black">
+                <div class="container text-center pt-5 mb-3 text-white" id="contact">
+                    <h1 class="mb-0 pb-0">CONTACT</h1>
+                    <img class="img-fluid contact-icons2 mt-2" src="../images/icons/contact-line-white.svg" alt="Card image cap">
+                    <h5 class="mt-4 mb-3" id="contact-question"> Have a questions or want to connect?</h5>
+                </div>
+
+                <div class="container mt-4 pb-5">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <nav class="nav justify-content-center">
+                                <a class="nav-link mr-5" href="http://www.linkedin.com/in/alex-nunez-76545617b" target="_blank">
+                                    <img class="img-fluid contact-icons" src="../images/icons/linkedin-white.svg"
+                                        alt="Card image cap">
+                                </a>
+
+                                <a class="nav-link" href="mailto: josenunez1692@gmail.com">
+                                    <img class="img-fluid contact-icons" src="../images/icons/mail_icon.svg"
+                                        alt="Card image cap">
+                                </a>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
 
         <!-- Page Footer ----------------------------->
         <footer>
+            <div class="container-fluid bg-black text-center text-grey pb-5">
+                JOSE A NUNEZ <span class="text-pink">&copy;</span>2019
+            </div>
 
         </footer>
 
