--- a/html/index.html
+++ b/html/index.html
@@ -296,7 +296,7 @@
                             <div class="card-header">
                                 <h5 class="pt-2 mb-0"><strong> Image Edge Detection </strong></h5>
                             </div>
-                            <img class="img-fluid project-img" src="../images/projects/cannyFinal.png"
+                            <img class="img-fluid project-img rounded" src="../images/projects/cannyFinal.png"
                                 alt="Card image cap">
                         </div>
                     </div>
@@ -551,7 +551,7 @@
                                         alt="Card image cap">
                                 </a>
 
-                                <a class="nav-link" href="mailto: josenunez1692@gmail.com">
+                                <a class="nav-link" href="mailto: alex@alexjnunez.com">
                                     <img class="img-fluid contact-icons" src="../images/icons/mail_icon.svg"
                                         alt="Card image cap">
                                 </a>
