Bio page is fixed except for svg image links

--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
                 <div class="container">
 
                     <div data-toggle="collapse" data-target=".navbar-collapse.show">
-                        <a class="navbar-brand nav-font" href="#">Home</a>
+                        <a class="navbar-brand nav-font" href="#">About</a>
                     </div>
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -52,7 +52,8 @@
                         <div class="navbar-nav ml-auto" data-toggle="collapse" data-target=".navbar-collapse.show">
                             <a class="nav-item nav-link " href="#">Bio <span class="sr-only">(current)</span></a>
                             <a class="nav-item nav-link " href="#">Blog (Coming Soon)</a>
-                            <a class="nav-item nav-link " href="https://drive.google.com/file/d/152HOTp8CKLcM5k-by6bFTNAudheUIW-Q/view?usp=sharing"
+                            <a class="nav-item nav-link "
+                                href="https://drive.google.com/file/d/152HOTp8CKLcM5k-by6bFTNAudheUIW-Q/view?usp=sharing"
                                 target="_blank">Resume</a>
                         </div>
                     </div>
@@ -100,9 +101,13 @@
                         </p>
 
                         <p>
-                            Please read my <strong>Bio</strong> if you would like to learn more about me. I will
-                            finish
-                            this introduction
+                            Please read my <strong>Bio</strong> if you would like to learn more about me, or if you
+                            would
+                            like a copy of my resume, please click on <strong>Resume</strong>.
+                        </p>
+
+                        <p>
+                            I will finish this introduction
                             with a quote that I hold dear, and try to live by:
                         </p>
 
