--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,7 @@
 
                         <!-- right nav items -->
                         <div class="navbar-nav ml-auto" data-toggle="collapse" data-target=".navbar-collapse.show">
-                            <a class="nav-item nav-link " href="#">Bio <span class="sr-only">(current)</span></a>
+                            <a class="nav-item nav-link " href="./Bio.html">Bio <span class="sr-only">(current)</span></a>
                             <a class="nav-item nav-link " href="#">Blog (Coming Soon)</a>
                             <a class="nav-item nav-link "
                                 href="https://drive.google.com/file/d/152HOTp8CKLcM5k-by6bFTNAudheUIW-Q/view?usp=sharing"
